--- a/environment.yml
+++ b/environment.yml
@@ -4,20 +4,20 @@ channels:
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
-  - bzip2=1.0.8
-  - ca-certificates=2025.2.25
-  - libffi=3.4.4
-  - ncurses=6.4
-  - openssl=3.0.16
-  - pip=25.1
-  - python=3.10.16
-  - readline=8.2
-  - setuptools=78.1.1
-  - sqlite=3.45.3
-  - tk=8.6.14
-  - wheel=0.45.1
-  - xz=5.6.4
-  - zlib=1.2.13
+  - bzip2=1.0.8=h80987f9_6
+  - ca-certificates=2025.2.25=hca03da5_0
+  - libffi=3.4.4=hca03da5_1
+  - ncurses=6.4=h313beb8_0
+  - openssl=3.0.16=h02f6b3c_0
+  - pip=25.1=pyhc872135_2
+  - python=3.10.16=hb885b13_1
+  - readline=8.2=h1a28f6b_0
+  - setuptools=78.1.1=py310hca03da5_0
+  - sqlite=3.45.3=h80987f9_0
+  - tk=8.6.14=h6ba3021_0
+  - wheel=0.45.1=py310hca03da5_0
+  - xz=5.6.4=h80987f9_1
+  - zlib=1.2.13=h18a0788_1
   - pip:
       - aiohappyeyeballs==2.6.1
       - aiohttp==3.11.18
@@ -74,3 +74,4 @@ dependencies:
       - watchdog==6.0.0
       - werkzeug==3.1.3
       - yarl==1.20.0
+prefix: /Users/bruceplxl/miniconda3/envs/kbkonlinetopup
