--- a/environment.yml
+++ b/environment.yml
@@ -4,74 +4,112 @@ channels:
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
-  - bzip2=1.0.8=h80987f9_6
-  - ca-certificates=2025.2.25=hca03da5_0
-  - libffi=3.4.4=hca03da5_1
-  - ncurses=6.4=h313beb8_0
-  - openssl=3.0.16=h02f6b3c_0
-  - pip=25.1=pyhc872135_2
-  - python=3.10.16=hb885b13_1
-  - readline=8.2=h1a28f6b_0
-  - setuptools=78.1.1=py310hca03da5_0
-  - sqlite=3.45.3=h80987f9_0
-  - tk=8.6.14=h6ba3021_0
-  - wheel=0.45.1=py310hca03da5_0
-  - xz=5.6.4=h80987f9_1
-  - zlib=1.2.13=h18a0788_1
+  - bzip2=1.0.8
+  - ca-certificates.2.25
+  - libffi=3.4.4
+  - ncurses=6.4
+  - openssl=3.0.16
+  - pip=25.1
+  - python=3.10.16
+  - readline=8.2
+  - setuptools=78.1.1
+  - sqlite=3.45.3
+  - tk=8.6.14
+  - wheel=0.45.1
+  - xz=5.6.4
+  - zlib=1.2.13
   - pip:
       - aiohappyeyeballs==2.6.1
       - aiohttp==3.11.18
       - aiosignal==1.3.2
       - aiosqlite==0.21.0
       - altair==5.5.0
+      - appnope==0.1.4
+      - asttokens==3.0.0
       - async-timeout==5.0.1
       - attrs==25.3.0
+      - backcall==0.2.0
+      - beautifulsoup4==4.13.4
+      - bleach==6.2.0
       - blinker==1.9.0
       - cachetools==5.5.2
       - certifi==2025.4.26
       - charset-normalizer==3.4.2
       - click==8.2.0
+      - decorator==5.2.1
+      - defusedxml==0.7.1
+      - docopt==0.6.2
       - et-xmlfile==2.0.0
+      - executing==2.2.0
+      - fastjsonschema==2.21.1
       - flask==3.1.1
       - flask-cors==5.0.1
       - frozenlist==1.6.0
       - gitdb==4.0.12
       - gitpython==3.1.44
       - idna==3.10
+      - ipython==8.12.3
       - itsdangerous==2.2.0
+      - jedi==0.19.2
       - jinja2==3.1.6
       - jsonschema==4.23.0
       - jsonschema-specifications==2025.4.1
+      - jupyter-client==8.6.3
+      - jupyter-core==5.7.2
+      - jupyterlab-pygments==0.3.0
       - markupsafe==3.0.2
+      - matplotlib-inline==0.1.7
+      - mistune==3.1.3
       - multidict==6.4.3
       - narwhals==1.39.1
+      - nbclient==0.10.2
+      - nbconvert==7.16.6
+      - nbformat==5.10.4
       - numpy==2.2.5
       - openpyxl==3.1.5
       - packaging==24.2
       - pandas==2.2.3
+      - pandocfilters==1.5.1
+      - parso==0.8.4
+      - pexpect==4.9.0
+      - pickleshare==0.7.5
       - pillow==11.2.1
+      - pipreqs==0.5.0
+      - platformdirs==4.3.8
       - plotly==6.1.0
       - prometheus-client==0.21.1
+      - prompt-toolkit==3.0.51
       - propcache==0.3.1
       - protobuf==6.31.0
+      - ptyprocess==0.7.0
+      - pure-eval==0.2.3
       - pyarrow==20.0.0
       - pydeck==0.9.1
+      - pygments==2.19.1
       - python-dateutil==2.9.0.post0
       - pytz==2025.2
+      - pyzmq==26.4.0
       - referencing==0.36.2
       - requests==2.32.3
       - rpds-py==0.25.0
       - schedule==1.2.2
       - six==1.17.0
       - smmap==5.0.2
+      - soupsieve==2.7
+      - stack-data==0.6.3
       - streamlit==1.45.1
       - tenacity==9.1.2
+      - tinycss2==1.4.0
       - toml==0.10.2
       - tornado==6.5
+      - traitlets==5.14.3
       - typing-extensions==4.13.2
       - tzdata==2025.2
       - urllib3==2.4.0
       - watchdog==6.0.0
+      - wcwidth==0.2.13
+      - webencodings==0.5.1
       - werkzeug==3.1.3
+      - yarg==0.1.9
       - yarl==1.20.0
 prefix: /Users/bruceplxl/miniconda3/envs/kbkonlinetopup
