--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-unittest2>=1.1.0
-futures>=3.0.5; python_version < "3.4"
-openpyxl
-flask
-sqlite3
-pandas
-schedule
-aiohttp
-watchdog
-prometheus-client
-flask-cors
-streamlit>=1.28.0
+aiohttp==3.11.18
+aiosqlite==0.21.0
+Flask==3.1.1
+flask_cors==5.0.1
+openpyxl==3.1.5
+pandas==2.2.3
+prometheus_client==0.21.1
+schedule==1.2.2
+streamlit==1.45.1
+watchdog==6.0.0
+Werkzeug==3.1.3
