--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
   - https://repo.anaconda.com/pkgs/r
 dependencies:
   - bzip2=1.0.8
-  - ca-certificates.2.25
+  - ca-certificates
   - libffi=3.4.4
   - ncurses=6.4
   - openssl=3.0.16
