--- a/custom_tasks.json
+++ b/custom_tasks.json
@@ -49,5 +49,90 @@
     "next_execution": "2025-05-26 00:47",
     "execution_count": 1,
     "recurring_details": null
+  },
+  {
+    "id": "a70dc03c-c8a5-4941-bf71-431b7ff82cda",
+    "name": "test4",
+    "description": "test4",
+    "task_type": "recurring",
+    "status": "active",
+    "target_status": 0,
+    "department_filter": "",
+    "user_filter": "AAA,Bruce,cs3,cs6,ops3,ops6,prod3,sec3,tech1,tech10,tech2,tech3,tech4,tech5,tech6,tech7,tech8,tech9,测试,测试1,测试10,测试11,测试13,测试14,测试15,测试16,测试17,测试18,测试19,测试2,测试3,测试5,测试6,测试7,测试8,测试9",
+    "execute_time": "00:53",
+    "recurring_pattern": "",
+    "created_at": "2025-05-25 00:52:42",
+    "last_executed": null,
+    "next_execution": null,
+    "execution_count": 0,
+    "recurring_details": null
+  },
+  {
+    "id": "f5a8eea3-c17a-440d-9327-2d78865937a4",
+    "name": "test5",
+    "description": "test5",
+    "task_type": "recurring",
+    "status": "active",
+    "target_status": 0,
+    "department_filter": "",
+    "user_filter": "AAA,Bruce,cs3,cs6,ops3,ops6,prod3,sec3,tech1,tech10,tech2,tech3,tech4,tech5,tech6,tech7,tech8,tech9,测试,测试1,测试10,测试11,测试13,测试14,测试15,测试16,测试17,测试18,测试19,测试2,测试3,测试5,测试6,测试7,测试8,测试9",
+    "execute_time": "00:58",
+    "recurring_pattern": "",
+    "created_at": "2025-05-25 00:57:13",
+    "last_executed": null,
+    "next_execution": null,
+    "execution_count": 0,
+    "recurring_details": null
+  },
+  {
+    "id": "39684882-e0f5-477e-b187-76bac38a1162",
+    "name": "test6",
+    "description": "test6",
+    "task_type": "recurring",
+    "status": "active",
+    "target_status": 0,
+    "department_filter": "",
+    "user_filter": "AAA,Bruce,cs3,cs6,ops3,ops6,prod3,sec3,tech1,tech10,tech2,tech3,tech4,tech5,tech6,tech7,tech8,tech9,测试,测试1,测试10,测试11,测试13,测试14,测试15,测试16,测试17,测试18,测试19,测试2,测试3,测试5,测试6,测试7,测试8,测试9",
+    "execute_time": "01:00",
+    "recurring_pattern": "",
+    "created_at": "2025-05-25 00:59:58",
+    "last_executed": null,
+    "next_execution": null,
+    "execution_count": 0,
+    "recurring_details": null
+  },
+  {
+    "id": "dd5f6458-a35b-487f-bca5-76a70dad83e3",
+    "name": "test7",
+    "description": "test7",
+    "task_type": "recurring",
+    "status": "active",
+    "target_status": 0,
+    "department_filter": "",
+    "user_filter": "AAA,Bruce,cs3,cs6,ops3,ops6,prod3,sec3,tech1,tech10,tech2,tech3,tech4,tech5,tech6,tech7,tech8,tech9,测试,测试1,测试10,测试11,测试13,测试14,测试15,测试16,测试17,测试18,测试19,测试2,测试3,测试5,测试6,测试7,测试8,测试9",
+    "execute_time": "01:05",
+    "recurring_pattern": "",
+    "created_at": "2025-05-25 01:04:08",
+    "last_executed": null,
+    "next_execution": null,
+    "execution_count": 0,
+    "recurring_details": null
+  },
+  {
+    "id": "5fe9ab51-12c1-44ff-b0f9-7f0998d19f35",
+    "name": "test8",
+    "description": "test8",
+    "task_type": "recurring",
+    "status": "active",
+    "target_status": 0,
+    "department_filter": "",
+    "user_filter": "AAA,Bruce,cs3,cs6,ops3,ops6,prod3,sec3,tech1,tech10,tech2,tech3,tech4,tech5,tech6,tech7,tech8,tech9,测试,测试1,测试10,测试11,测试13,测试14,测试15,测试16,测试17,测试18,测试19,测试2,测试3,测试5,测试6,测试7,测试8,测试9",
+    "execute_time": "13:58",
+    "recurring_pattern": "",
+    "created_at": "2025-05-25 13:57:37",
+    "last_executed": null,
+    "next_execution": null,
+    "execution_count": 0,
+    "recurring_details": null
   }
 ]
