--- a/manager_server.service
+++ b/manager_server.service
@@ -4,13 +4,18 @@ After=network.target
 
 [Service]
 Type=simple
-User=root
-WorkingDirectory=/Users/bruceplxl/Dev/ICmanager
-ExecStart=/Users/bruceplxl/miniconda3/envs/kbkonlinetopup/bin/python manager_server.py
+User=bruceplxl
+WorkingDirectory=/home/bruceplxl/deploy/kbkonlinetopup
+ExecStart=/bin/bash -c 'source /home/bruceplxl/miniconda3/bin/activate kbkonlinetopup && python manager_server.py'
 Restart=always
 RestartSec=10
-StandardOutput=append:/Users/bruceplxl/Dev/ICmanager/logs/manager_server.log
-StandardError=append:/Users/bruceplxl/Dev/ICmanager/logs/manager_server.log
+StandardOutput=syslog
+StandardError=syslog
+SyslogIdentifier=manager_server
+Environment=PYTHONUNBUFFERED=1
+ProtectSystem=full
+PrivateTmp=true
+NoNewPrivileges=true
 
 [Install]
-WantedBy=multi-user.target 
+WantedBy=multi-user.target
