--- a/custom_tasks.json
+++ b/custom_tasks.json
@@ -134,5 +134,56 @@
     "next_execution": null,
     "execution_count": 0,
     "recurring_details": null
+  },
+  {
+    "id": "30945333-5cc1-4784-b6eb-ce74aeab508f",
+    "name": "测试周日清洁工",
+    "description": "无",
+    "task_type": "recurring",
+    "status": "active",
+    "target_status": 0,
+    "department_filter": "",
+    "user_filter": "AAA,Bruce,cs3,cs6,ops3,ops6,prod3,sec3,tech1,tech10,tech2,tech3,tech4,tech5,tech6,tech7,tech8,tech9,测试,测试1,测试10,测试11,测试13,测试14,测试15,测试16,测试17,测试18,测试19,测试2,测试3,测试5,测试6,测试7,测试8,测试9",
+    "execute_time": "10:09",
+    "recurring_pattern": "",
+    "created_at": "2025-05-26 10:08:56",
+    "last_executed": null,
+    "next_execution": null,
+    "execution_count": 0,
+    "recurring_details": null
+  },
+  {
+    "id": "4f90727f-a2d7-44bf-830f-3ee7533f03bc",
+    "name": "test10",
+    "description": "test10",
+    "task_type": "recurring",
+    "status": "active",
+    "target_status": 0,
+    "department_filter": "",
+    "user_filter": "AAA,Bruce,cs3,cs6,ops3,ops6,prod3,sec3,tech1,tech10,tech2,tech3,tech4,tech5,tech6,tech7,tech8,tech9,测试,测试1,测试10,测试11,测试13,测试14,测试15,测试16,测试17,测试18,测试19,测试2,测试3,测试5,测试6,测试7,测试8,测试9",
+    "execute_time": "10:10",
+    "recurring_pattern": "",
+    "created_at": "2025-05-26 10:09:32",
+    "last_executed": "2025-05-26 10:10:00",
+    "next_execution": "2025-05-27 10:10",
+    "execution_count": 1,
+    "recurring_details": null
+  },
+  {
+    "id": "76686e6a-557c-4138-800c-358069747f6a",
+    "name": "test11",
+    "description": "test",
+    "task_type": "recurring",
+    "status": "active",
+    "target_status": 1,
+    "department_filter": "",
+    "user_filter": "AAA,Bruce,cs3,cs6,ops3,ops6,prod3,sec3,tech1,tech10,tech2,tech3,tech4,tech5,tech6,tech7,tech8,tech9,测试,测试1,测试10,测试11,测试13,测试14,测试15,测试16,测试17,测试18,测试19,测试2,测试3,测试5,测试6,测试7,测试8,测试9",
+    "execute_time": "10:16",
+    "recurring_pattern": "",
+    "created_at": "2025-05-26 10:15:35",
+    "last_executed": "2025-05-26 10:16:00",
+    "next_execution": "2025-05-27 10:16",
+    "execution_count": 1,
+    "recurring_details": null
   }
 ]
